--- a/.github/workflows/official-build.yml
+++ b/.github/workflows/official-build.yml
@@ -104,7 +104,7 @@ jobs:
           path: SerialLoops.AppImage
           retention-days: 1
 
-  linux-dpkg-tarball:
+  linux-dpkg-tarball-full:
     runs-on: ubuntu-latest
     steps:
       - name: Check out
@@ -119,13 +119,13 @@ jobs:
         run: |
           chmod +x ./src/SerialLoops/bin/Release/net8.0/linux-x64/publish/SerialLoops
           pushd ./src/SerialLoops/bin/Release/net8.0/linux-x64/publish
-          tar -czvf ../SerialLoops.tar.gz --transform "s,^\.\/,SerialLoops-$SLVersion/," .
+          tar -czvf ../SerialLoops-full.tar.gz --transform "s,^\.\/,SerialLoops-$SLVersion/," .
           popd
-      - name: Upload tarball
+      - name: Upload full tarball
         uses: actions/upload-artifact@v4
         with:
-          name: linux-x64-tarball
-          path: src/SerialLoops/bin/Release/net8.0/linux-x64/SerialLoops.tar.gz
+          name: linux-x64-tarball-full
+          path: src/SerialLoops/bin/Release/net8.0/linux-x64/SerialLoops-full.tar.gz
           retention-days: 1
       - name: Create deb package
         shell: pwsh
@@ -170,6 +170,30 @@ jobs:
         with:
           name: linux-x64-rpm
           path: SerialLoops.rpm
+          retention-days: 1
+
+  linux-tarball-light:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out
+        uses: actions/checkout@v4
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v4.1.0
+        with:
+          dotnet-version: '8.0.x'
+      - name: Build & Publish Serial Loops
+        run: dotnet publish src/SerialLoops/SerialLoops.csproj -c Release -f net8.0 /p:DebugType=None /p:DebugSymbols=false /p:PublishSingleFile=true
+      - name: Create tarball
+        run: |
+          chmod +x ./src/SerialLoops/bin/Release/net8.0/publish/SerialLoops
+          pushd ./src/SerialLoops/bin/Release/net8.0/publish
+          tar -czvf ../SerialLoops-light.tar.gz --transform "s,^\.\/,SerialLoops-$SLVersion/," .
+          popd
+      - name: Upload light tarball
+        uses: actions/upload-artifact@v4
+        with:
+          name: linux-univ-tarball-light
+          path: src/SerialLoops/bin/Release/net8.0/SerialLoops-light.tar.gz
           retention-days: 1
 
   macos-pkg:
@@ -246,7 +270,7 @@ jobs:
 
   release:
     runs-on: ubuntu-latest
-    needs: [ linux-flatpak, linux-appimage, linux-dpkg-tarball, linux-rpm, macos-pkg, windows ]
+    needs: [ linux-flatpak, linux-appimage, linux-dpkg-tarball-full, linux-rpm, linux-tarball-light, macos-pkg, windows ]
     steps:
       - name: Download Linux flatpak
         uses: actions/download-artifact@v4.1.8
@@ -256,10 +280,14 @@ jobs:
         uses: actions/download-artifact@v4.1.8
         with:
           name: linux-x64-appimage
-      - name: Download Linux tarball
+      - name: Download Linux full tarball
         uses: actions/download-artifact@v4.1.8
         with:
-          name: linux-x64-tarball
+          name: linux-x64-tarball-full
+      - name: Download Linux light tarball
+        uses: actions/download-artifact@v4.1.8
+        with:
+          name: linux-univ-tarball-light
       - name: Download Linux dpkg
         uses: actions/download-artifact@v4.1.8
         with:
@@ -291,7 +319,8 @@ jobs:
           Get-ChildItem .
           Move-Item -Path SerialLoops.flatpak -Destination release/SerialLoops-linux-x64-v$($env:SLVersion).flatpak
           Move-Item -Path SerialLoops.AppImage -Destination release/SerialLoops-linux-x64-v$($env:SLVersion).AppImage
-          Move-Item -Path SerialLoops.tar.gz -Destination release/SerialLoops-linux-x64-v$($env:SLVersion).tar.gz
+          Move-Item -Path SerialLoops-full.tar.gz -Destination release/SerialLoops-linux-x64-v$($env:SLVersion).tar.gz
+          Move-Item -Path SerialLoops-light.tar.gz -Destination release/SerialLoops-linux-univ-light-v$($env:SLVersion).tar.gz
           Move-Item -Path SerialLoops.deb -Destination release/SerialLoops-linux-x64-$($env:SLVersion).deb
           Move-Item -Path SerialLoops.rpm -Destination release/SerialLoops-linux-x64-$($env:SLVersion)-1.fc39.x86_64.rpm
           Move-Item -Path SerialLoops-osx-arm64.pkg -Destination release/SerialLoops-macOS-arm-v$($env:SLVersion)-installer.pkg
@@ -328,9 +357,12 @@ jobs:
             ### Linux
             We recommend using the provided Flatpak as it is the easiest to use. First, install [Flatpak](https://flatpak.org/setup/) if you haven't already. Then, download the Serial Loops Flatpak artifact and double click it or run `flatpak install` on it from the terminal. It will then install itself, bringing all the necessary dependencies with it.
 
-            You can also install the official [melonDS Flatpak from Flathub](https://flathub.org/apps/net.kuribo64.melonDS) to use as your emulator. We reocmmend installing it from the [flathub-beta](https://docs.flathub.org/docs/for-users/installation/#flathub-beta-repository) repository as that is where the most up-to-date versions tend to be pushed.
+            You can also install the official [melonDS Flatpak from Flathub](https://flathub.org/apps/net.kuribo64.melonDS) to use as your emulator. We recommend installing it from the [flathub-beta](https://docs.flathub.org/docs/for-users/installation/#flathub-beta-repository) repository as that is where the most up-to-date versions tend to be pushed.
 
-            If you would rather manually install, follow the below instructions:
+            The main benefit of the Flatpak is that it is packaged with devkitARM for ease of use. However, if you already have devkitARM installed or would like to use something more lightweight, we also provide the following options (all of which require [installing devkitARM yourself](https://devkitpro.org/wiki/Getting_Started)):
+            * The AppImage is designed to run on all Linux distros and is an easy option for
             * The `.deb` package is intended for Debian-based distros (e.g. Ubuntu). Install it with `sudo apt install -f ./SerialLoops-linux-x64-${{ env.SLVersion }}.deb`.
             * The `.rpm` package is intended for Red Hat distros (e.g. Fedora). Install it with `sudo dnf install ./SerialLoops-linux-x64-${{ env.SLVersion }}-1.fc39.x86_64.rpm`.
-            * For other Linux distros, please use the binaries packaged in the `.tar.gz` archive; when doing so, ensure you install the OpenAL binaries so audio playback works.
+            * You may also opt to simply use the binaries packaged in one of the `.tar.gz` archives; when doing so, ensure you install the OpenAL binaries so audio playback works.
+              - The "x64" `.tar.gz` includes the dotnet binary and thus only requires installing OpenAL.
+              - The "univ-light" `.tar.gz` does not include dotnet and thus has the smallest footprint. Be sure to install [dotnet](https://dot.net/) for your distribution before running it. This release is the only Linux release compatible with ARM64 machines.
