--- a/install/linux/appimage/AppImageBuilder.yml
+++ b/install/linux/appimage/AppImageBuilder.yml
@@ -27,6 +27,8 @@ AppDir:
     - sourceline: deb http://security.ubuntu.com/ubuntu/ bionic-security multiverse
     include:
     - libc6:amd64
+    - libopenal-dev:amd64
+    - make:amd64
   files:
     include: []
     exclude:
