--- a/.github/workflows/official-build.yml
+++ b/.github/workflows/official-build.yml
@@ -104,7 +104,7 @@ jobs:
           path: SerialLoops.AppImage
           retention-days: 1
 
-  linux-dpkg-tarball-full:
+  linux-dpkg-tarball:
     runs-on: ubuntu-latest
     steps:
       - name: Check out
@@ -119,13 +119,13 @@ jobs:
         run: |
           chmod +x ./src/SerialLoops/bin/Release/net8.0/linux-x64/publish/SerialLoops
           pushd ./src/SerialLoops/bin/Release/net8.0/linux-x64/publish
-          tar -czvf ../SerialLoops-full.tar.gz --transform "s,^\.\/,SerialLoops-$SLVersion/," .
+          tar -czvf ../SerialLoops-x64.tar.gz --transform "s,^\.\/,SerialLoops-$SLVersion/," .
           popd
-      - name: Upload full tarball
+      - name: Upload x64 tarball
         uses: actions/upload-artifact@v4
         with:
-          name: linux-x64-tarball-full
-          path: src/SerialLoops/bin/Release/net8.0/linux-x64/SerialLoops-full.tar.gz
+          name: linux-x64-tarball
+          path: src/SerialLoops/bin/Release/net8.0/linux-x64/SerialLoops-x64.tar.gz
           retention-days: 1
       - name: Create deb package
         shell: pwsh
@@ -172,7 +172,7 @@ jobs:
           path: SerialLoops.rpm
           retention-days: 1
 
-  linux-tarball-light:
+  linux-tarball-univ:
     runs-on: ubuntu-latest
     steps:
       - name: Check out
@@ -187,13 +187,13 @@ jobs:
         run: |
           chmod +x ./src/SerialLoops/bin/Release/net8.0/publish/SerialLoops
           pushd ./src/SerialLoops/bin/Release/net8.0/publish
-          tar -czvf ../SerialLoops-light.tar.gz --transform "s,^\.\/,SerialLoops-$SLVersion/," .
+          tar -czvf ../SerialLoops-univ.tar.gz --transform "s,^\.\/,SerialLoops-$SLVersion/," .
           popd
-      - name: Upload light tarball
+      - name: Upload universal tarball
         uses: actions/upload-artifact@v4
         with:
-          name: linux-univ-tarball-light
-          path: src/SerialLoops/bin/Release/net8.0/SerialLoops-light.tar.gz
+          name: linux-univ-tarball
+          path: src/SerialLoops/bin/Release/net8.0/SerialLoops-univ.tar.gz
           retention-days: 1
 
   macos-pkg:
@@ -270,7 +270,7 @@ jobs:
 
   release:
     runs-on: ubuntu-latest
-    needs: [ linux-flatpak, linux-appimage, linux-dpkg-tarball-full, linux-rpm, linux-tarball-light, macos-pkg, windows ]
+    needs: [ linux-flatpak, linux-appimage, linux-dpkg-tarball, linux-rpm, linux-tarball-univ, macos-pkg, windows ]
     steps:
       - name: Download Linux flatpak
         uses: actions/download-artifact@v4.1.8
@@ -283,11 +283,11 @@ jobs:
       - name: Download Linux full tarball
         uses: actions/download-artifact@v4.1.8
         with:
-          name: linux-x64-tarball-full
-      - name: Download Linux light tarball
+          name: linux-x64-tarball
+      - name: Download Linux universal tarball
         uses: actions/download-artifact@v4.1.8
         with:
-          name: linux-univ-tarball-light
+          name: linux-univ-tarball
       - name: Download Linux dpkg
         uses: actions/download-artifact@v4.1.8
         with:
@@ -319,8 +319,8 @@ jobs:
           Get-ChildItem .
           Move-Item -Path SerialLoops.flatpak -Destination release/SerialLoops-linux-x64-v$($env:SLVersion).flatpak
           Move-Item -Path SerialLoops.AppImage -Destination release/SerialLoops-linux-x64-v$($env:SLVersion).AppImage
-          Move-Item -Path SerialLoops-full.tar.gz -Destination release/SerialLoops-linux-x64-v$($env:SLVersion).tar.gz
-          Move-Item -Path SerialLoops-light.tar.gz -Destination release/SerialLoops-linux-univ-light-v$($env:SLVersion).tar.gz
+          Move-Item -Path SerialLoops-x64.tar.gz -Destination release/SerialLoops-linux-x64-v$($env:SLVersion).tar.gz
+          Move-Item -Path SerialLoops-univ.tar.gz -Destination release/SerialLoops-linux-univ-v$($env:SLVersion).tar.gz
           Move-Item -Path SerialLoops.deb -Destination release/SerialLoops-linux-x64-$($env:SLVersion).deb
           Move-Item -Path SerialLoops.rpm -Destination release/SerialLoops-linux-x64-$($env:SLVersion)-1.fc39.x86_64.rpm
           Move-Item -Path SerialLoops-osx-arm64.pkg -Destination release/SerialLoops-macOS-arm-v$($env:SLVersion)-installer.pkg
@@ -365,4 +365,4 @@ jobs:
             * The `.rpm` package is intended for Red Hat distros (e.g. Fedora). Install it with `sudo dnf install ./SerialLoops-linux-x64-${{ env.SLVersion }}-1.fc39.x86_64.rpm`.
             * You may also opt to simply use the binaries packaged in one of the `.tar.gz` archives; when doing so, ensure you install the OpenAL binaries so audio playback works.
               - The "x64" `.tar.gz` includes the dotnet binary and thus only requires installing OpenAL.
-              - The "univ-light" `.tar.gz` does not include dotnet and thus has the smallest footprint. Be sure to install [dotnet](https://dot.net/) for your distribution before running it. This release is the only Linux release compatible with ARM64 machines.
+              - The "univ" `.tar.gz` can run on several different architectures (notably ARM64) as it does not include dotnet. Be sure to install [dotnet](https://dot.net/) for your distribution & architecture before running it.
