--- a/.github/workflows/official-build.yml
+++ b/.github/workflows/official-build.yml
@@ -154,7 +154,7 @@ jobs:
           repository: 'PortAudio/portaudio'
           path: portaudio
       - name: cmake configure
-        run: cmake ${{ github.workspace }}/portaudio -G "Unix Makefiles" -DCMAKE_INSTALL_PREFIX=${{ github.workspace }}/build/lib -DCMAKE_POLICY_VERSION_MINIMUM=3.5 -DPA_BUILD_SHARED_LIBS=true -DCMAKE_OSX_ARCHITECTURES=${{ matrix.type.arch }}
+        run: pushd ${{ github.workspace }}/portaudio && cmake . -G "Unix Makefiles" -DCMAKE_INSTALL_PREFIX=./build/lib -DCMAKE_POLICY_VERSION_MINIMUM=3.5 -DPA_BUILD_SHARED_LIBS=true -DCMAKE_OSX_ARCHITECTURES=${{ matrix.type.arch }} && popd
       - name: make
         run: pushd ${{ github.workspace }}/portaudio && make && popd
       - name: Setup .NET
