--- a/src/SerialLoops/SerialLoops.csproj
+++ b/src/SerialLoops/SerialLoops.csproj
@@ -13,10 +13,13 @@
   </PropertyGroup>
 
   <Target Name="PreBuild" BeforeTargets="PreBuildEvent" Condition="$([System.OperatingSystem]::IsMacOS()) And !Exists('libportaudio.dylib') And '$(CIBuild)' != 'true'">
-    <Exec Command="/bin/bash -C install-portaudio-macos.sh ../src/SerialLoops/libportaudio.dylib" WorkingDirectory="../.."/>
+    <Exec Command="/bin/bash -C install-portaudio-macos.sh ../src/SerialLoops/libportaudio.dylib $(rid)" WorkingDirectory="../.."/>
   </Target>
   <ItemGroup Condition="$([System.OperatingSystem]::IsMacOS())">
-    <None Include="libportaudio.dylib" CopyToOutputDirectory="PreserveNewest" CopyToPublishDirectory="PreserveNewest"/>
+    <Content Include="libportaudio.dylib">
+      <TargetPath>runtimes/osx/native/libportaudio.dylib</TargetPath>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
   <PropertyGroup>
