--- a/.github/workflows/official-build.yml
+++ b/.github/workflows/official-build.yml
@@ -155,7 +155,7 @@ jobs:
           ref: release-2.32.x
           path: SDL
       - name: SDL cmake configure
-        run: pushd ${{ github.workspace }}/SDL && cmake -S . -B build -DSDL_SHARED=ON -DCMAKE_SYSTEM_NAME=Darwin -DCMAKE_OSX_ARCHITECTURES="arm64;x86_64" && popd
+        run: pushd ${{ github.workspace }}/SDL && cmake -S . -B build -DSDL_SHARED=ON -DCMAKE_SYSTEM_NAME=Darwin -DCMAKE_OSX_ARCHITECTURES="${{ matrix.type.arch }}" && popd
       - name: SDL cmake build
         run: pushd ${{ github.workspace }}/SDL && cmake --build build && popd
       - name: Setup .NET
