--- a/.github/workflows/official-build.yml
+++ b/.github/workflows/official-build.yml
@@ -1,8 +1,8 @@
 name: Serial Loops Official Build
 run-name: "Official release build for Serial Loops"
 on:
-  # schedule:
-  #   - cron: '0 23 * * *'
+  schedule:
+    - cron: '0 0 * * *' # runs daily at 00:00
   workflow_dispatch:
     inputs:
       version:
@@ -22,7 +22,19 @@ env:
   SLAssemblyVersion: ${{ inputs.version == '' && format('0.3.9999.a{0}', github.run_number) || inputs.version }}
 
 jobs:
+  check-new-commits:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check if new commits
+        run: echo "NEW_COMMIT_COUNT=$(git log --oneline --since '24 hours ago' | wc -l)" >> $GITHUB_ENV
+        if: ${{ github.event_name == 'schedule' }}
+      - name: Pass because dispatched
+        run: echo "NEW_COMMIT_COUNT=1" >> $GITHUB_ENV
+        if: ${{ github.event_name != 'schedule' }}
+
   linux-flatpak-setup:
+    needs: check-new-commits
+    if: ${{ github.env.NEW_COMMIT_COUNT > 0 }}
     runs-on: ubuntu-latest
     steps:
       - name: Check out
@@ -122,6 +134,8 @@ jobs:
           retention-days: 1
 
   linux-dpkg-tarball:
+    needs: check-new-commits
+    if: ${{ github.env.NEW_COMMIT_COUNT > 0 }}
     runs-on: ubuntu-latest
     steps:
       - name: Check out
@@ -166,6 +180,8 @@ jobs:
           retention-days: 1
 
   linux-rpm:
+    needs: check-new-commits
+    if: ${{ github.env.NEW_COMMIT_COUNT > 0 }}
     runs-on: ubuntu-latest
     container:
       image: fedora:39
@@ -190,6 +206,8 @@ jobs:
           retention-days: 1
 
   macos-pkg:
+    needs: check-new-commits
+    if: ${{ github.env.NEW_COMMIT_COUNT > 0 }}
     runs-on: macos-latest
     strategy:
       matrix:
@@ -225,6 +243,8 @@ jobs:
           retention-days: 1
 
   windows:
+    needs: check-new-commits
+    if: ${{ github.env.NEW_COMMIT_COUNT > 0 }}
     runs-on: windows-latest
     steps:
       - name: Check out
@@ -262,6 +282,7 @@ jobs:
           retention-days: 1
 
   release:
+    if: ${{ github.env.NEW_COMMIT_COUNT > 0 }}
     runs-on: ubuntu-latest
     needs: [ linux-flatpak, linux-appimage, linux-dpkg-tarball, linux-rpm, macos-pkg, windows ]
     steps:
