--- a/src/SerialLoops/SerialLoops.csproj
+++ b/src/SerialLoops/SerialLoops.csproj
@@ -12,6 +12,19 @@
     <ApplicationIcon>Assets\serial-loops.ico</ApplicationIcon>
   </PropertyGroup>
 
+  <Target Name="PreBuild" BeforeTargets="PreBuildEvent" Condition="$([System.OperatingSystem]::IsMacOS()) And !Exists('libSDL2.dylib') And '$(CIBuild)' != 'true'">
+    <Exec Command="/bin/bash -C install-sdl-macos.sh ../src/SerialLoops/libSDL2.dylib" WorkingDirectory="../.."/>
+  </Target>
+  <ItemGroup Condition="$([System.OperatingSystem]::IsMacOS())">
+    <None Include="libSDL2.dylib">
+      <TargetPath>runtimes/osx/native/libSDL2.dylib</TargetPath>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="libSDL2.dylib">
+      <CopyToPublishDirectory>Always</CopyToPublishDirectory>
+    </None>
+  </ItemGroup>
+
   <PropertyGroup>
     <CFBundleName>Serial Loops</CFBundleName>
     <!-- Also defines .app file name -->
@@ -104,7 +117,7 @@
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' != 'net8.0-windows'">
-    <PackageReference Include="OpenTK" Version="4.9.3" />
+    <PackageReference Include="NAudio.Sdl2" Version="2.2.6" />
   </ItemGroup>
 
   <ItemGroup>
