--- a/.github/workflows/official-build.yml
+++ b/.github/workflows/official-build.yml
@@ -2,7 +2,7 @@ name: Serial Loops Official Build
 run-name: "Official release build for Serial Loops"
 on:
   schedule:
-    - cron: '35 1 * * *' # runs daily at 00:00
+    - cron: '35 0 * * *'
   workflow_dispatch:
     inputs:
       version:
@@ -18,8 +18,8 @@ permissions:
   contents: write
 
 env:
-  SLVersion: ${{ inputs.version == '' && format('0.3.pre.a{0}', github.run_number) || inputs.version }}
-  SLAssemblyVersion: ${{ inputs.version == '' && format('0.3.9999.a{0}', github.run_number) || inputs.version }}
+  SLVersion: ${{ inputs.version == '' && format('0.3.pre.{0}', github.run_number) || inputs.version }}
+  SLAssemblyVersion: ${{ inputs.version == '' && format('0.3.9999.{0}', github.run_number) || inputs.version }}
 
 jobs:
   check-new-commits:
@@ -103,6 +103,8 @@ jobs:
 
   linux-appimage:
     runs-on: ubuntu-latest
+    needs: check-new-commits
+    if: ${{ github.env.NEW_COMMIT_COUNT > 0 }}
     steps:
       - name: Check out
         uses: actions/checkout@v4
