--- a/.github/workflows/official-build.yml
+++ b/.github/workflows/official-build.yml
@@ -23,8 +23,8 @@ permissions:
   contents: write
 
 env:
-  SLVersion: ${{ inputs.version == '' && format('0.3.pre.{0}', github.run_number) || inputs.version }}
-  SLAssemblyVersion: ${{ inputs.version == '' && format('0.3.9999.{0}', github.run_number) || inputs.version }}
+  SLVersion: ${{ inputs.version == '' && format('0.3.apre.{0}', github.run_number) || inputs.version }}
+  SLAssemblyVersion: ${{ inputs.version == '' && format('0.3.8888.{0}', github.run_number) || inputs.version }}
 
 jobs:
   check-new-commits:
