--- a/.github/workflows/official-build.yml
+++ b/.github/workflows/official-build.yml
@@ -1,13 +1,16 @@
 name: Serial Loops Official Build
 run-name: "Official release build for Serial Loops"
 on:
-  schedule:
-    - cron: '35 0 * * *'
-    - cron: '35 4 * * *'
-    - cron: '35 8 * * *'
-    - cron: '35 12 * * *'
-    - cron: '35 16 * * *'
-    - cron: '35 20 * * *'
+  # schedule:
+  #   - cron: '35 0 * * *'
+  #   - cron: '35 4 * * *'
+  #   - cron: '35 8 * * *'
+  #   - cron: '35 12 * * *'
+  #   - cron: '35 16 * * *'
+  #   - cron: '35 20 * * *'
+  push:
+    branches:
+      - 'main'
   workflow_dispatch:
     inputs:
       version:
@@ -27,21 +30,21 @@ env:
   SLAssemblyVersion: ${{ inputs.version == '' && format('0.3.8888.{0}', github.run_number) || inputs.version }}
 
 jobs:
-  check-new-commits:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out
-        uses: actions/checkout@v4
-      - name: Check if new commits
-        run: echo "NEW_COMMIT_COUNT=$(git log --oneline --since '24 hours ago' | wc -l | sed 's/ //g')" >> $GITHUB_ENV
-        if: ${{ github.event_name == 'schedule' }}
-      - name: Pass because dispatched
-        run: echo "NEW_COMMIT_COUNT=1" >> $GITHUB_ENV
-        if: ${{ github.event_name != 'schedule' }}
+  # check-new-commits:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Check out
+  #       uses: actions/checkout@v4
+  #     - name: Check if new commits
+  #       run: echo "NEW_COMMIT_COUNT=$(git log --oneline --since '24 hours ago' | wc -l)" >> $GITHUB_ENV
+  #       if: ${{ github.event_name == 'schedule' }}
+  #     - name: Pass because dispatched
+  #       run: echo "NEW_COMMIT_COUNT=1" >> $GITHUB_ENV
+  #       if: ${{ github.event_name != 'schedule' }}
 
   linux-flatpak-setup:
-    needs: check-new-commits
-    if: ${{ github.env.NEW_COMMIT_COUNT != '0' }}
+    # needs: check-new-commits
+    # if: ${{ github.env.NEW_COMMIT_COUNT > 0 }}
     runs-on: ubuntu-latest
     steps:
       - name: Check out
@@ -110,8 +113,8 @@ jobs:
 
   linux-appimage:
     runs-on: ubuntu-latest
-    needs: check-new-commits
-    if: ${{ github.env.NEW_COMMIT_COUNT != '0' }}
+    # needs: check-new-commits
+    # if: ${{ github.env.NEW_COMMIT_COUNT > 0 }}
     steps:
       - name: Check out
         uses: actions/checkout@v4
@@ -143,8 +146,8 @@ jobs:
           retention-days: 1
 
   linux-dpkg-tarball:
-    needs: check-new-commits
-    if: ${{ github.env.NEW_COMMIT_COUNT != '0' }}
+    # needs: check-new-commits
+    # if: ${{ github.env.NEW_COMMIT_COUNT > 0 }}
     runs-on: ubuntu-latest
     steps:
       - name: Check out
@@ -189,8 +192,8 @@ jobs:
           retention-days: 1
 
   linux-rpm:
-    needs: check-new-commits
-    if: ${{ github.env.NEW_COMMIT_COUNT != '0' }}
+    # needs: check-new-commits
+    # if: ${{ github.env.NEW_COMMIT_COUNT > 0 }}
     runs-on: ubuntu-latest
     container:
       image: fedora:39
@@ -215,8 +218,8 @@ jobs:
           retention-days: 1
 
   macos-pkg:
-    needs: check-new-commits
-    if: ${{ github.env.NEW_COMMIT_COUNT != '0' }}
+    # needs: check-new-commits
+    # if: ${{ github.env.NEW_COMMIT_COUNT > 0 }}
     runs-on: macos-latest
     strategy:
       matrix:
@@ -264,8 +267,8 @@ jobs:
           retention-days: 1
 
   windows:
-    needs: check-new-commits
-    if: ${{ github.env.NEW_COMMIT_COUNT != '0' }}
+    # needs: check-new-commits
+    # if: ${{ github.env.NEW_COMMIT_COUNT > 0 }}
     runs-on: windows-latest
     steps:
       - name: Check out
