--- a/install/linux/flatpak/club.haroohie.SerialLoops.yaml
+++ b/install/linux/flatpak/club.haroohie.SerialLoops.yaml
@@ -54,7 +54,7 @@ modules:
     sources:
       - type: git
         url: https://github.com/haroohie-club/SerialLoops.git
-        branch: Avalonia
+        branch: main
       - ./nuget-sources.json
       - type: patch
         path: patches/sandbox.patch
