--- a/install/linux/flatpak/club.haroohie.SerialLoops.yaml
+++ b/install/linux/flatpak/club.haroohie.SerialLoops.yaml
@@ -43,14 +43,17 @@ modules:
       - make install
 
   - name: SDL
-    buildsystem: cmake
+    buildsystem: simple
     sources:
       - type: git
         url: https://github.com/libsdl-org/SDL.git
         branch: release-2.32.x
     build-commands:
       - mkdir ../build
-      - cd ../build && cmake -S ../SDL -B . -DCMAKE_BUILD_TYPE=Release && cmake --build . --config Release --parallel && cmake --install . --config Release
+      - cd ../build
+      - cmake -S ../SDL -B . -DCMAKE_BUILD_TYPE=Release
+      - cmake --build . --config Release --parallel
+      - cmake --install . --config Release
 
   - name: SerialLoops
     buildsystem: simple
