--- a/.github/workflows/official-build.yml
+++ b/.github/workflows/official-build.yml
@@ -306,7 +306,7 @@ jobs:
           retention-days: 1
 
   release:
-    if: ${{ github.env.NEW_COMMIT_COUNT != '0' }}
+    # if: ${{ github.env.NEW_COMMIT_COUNT != '0' }}
     runs-on: ubuntu-latest
     needs: [ linux-flatpak, linux-appimage, linux-dpkg-tarball, linux-rpm, macos-pkg, windows ]
     steps:
